# Deauth-Alert-WiFi-IoT-System

./: .env.example  .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  NOTICE  README.en.md  README.md  SECURITY.en.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/scripts/: gen_config.sh
.github/workflows/: firmware-build.yml
backend/: .dockerignore  Dockerfile  README.en.md  README.md  pytest.ini  requirements-dev.txt
backend/src/: .env.example  database.py  main.py  models.py  requirements.txt  schemas.py
backend/src/routes/: admin_routes.py  alerts.py  alerts_summary.py  auth.py  custom_queries.py  esp32_nodes.py  logs.py  websocket.py
backend/src/services/: auth_service.py  service_auth.py
backend/tests/: conftest.py  test_event_type.py
docs/lab/: F6-protocolo.en.md  F6-protocolo.md  README.en.md  README.md  diag-schema.json  results-template.en.md  results-template.md  run.json.example
frontend/: .dockerignore  .env.example  Dockerfile  README.en.md  README.md  index.html  nginx.conf  package-lock.json  package.json  postcss.config.cjs  tailwind.config.ts  vite.config.ts
frontend/public/icons/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AlertHeatmapTable.tsx  AlertNotification.tsx  AlertRow.tsx  AlertSummaryTable.tsx  BackToHomeButton.tsx  ConnectionNotification.tsx  DownloadButton.tsx  Footer.tsx  LatestAlertsTable.tsx  LogFilters.tsx  LogViewer.tsx  LogoutButton.tsx  NodeStatusTable.tsx  PasswordInput.tsx  PasswordRequirements.tsx  ReloadButton.tsx  ReportsTable.tsx  StatsCard.tsx  StatsTable.tsx  TableHeader.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAlertWatcher.ts  useAuth.ts  useNodeConnectionWatcher.ts
frontend/src/pages/: DashboardPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  LogsPage.tsx  PublicLayout.tsx  RegisterPage.tsx  ReportsPage.tsx  ResetPasswordPage.tsx  StatisticsPage.tsx
frontend/src/routes/: PrivateRoute.tsx
frontend/src/services/: auth.ts  http.ts  reports.ts  socket.ts  stats.ts
frontend/src/types/: auth.ts
frontend/src/utils/: validators.ts
perception-layer/: partitions.csv
perception-layer/ESP32_01_Deauth_Detector_CH_01/: CMakeLists.txt  sdkconfig.defaults
perception-layer/ESP32_01_Deauth_Detector_CH_01/main/: CMakeLists.txt  main.c
perception-layer/ESP32_02_Deauth_Detector_CH_06/: CMakeLists.txt  sdkconfig
perception-layer/ESP32_02_Deauth_Detector_CH_06/main/: main.c
perception-layer/ESP32_03_Deauth_Detector_CH_11/main/: CMakeLists.txt  main.c
perception-layer/ESP32_04_Deauth_Detector_SCAN/: CMakeLists.txt
perception-layer/ESP32_04_Deauth_Detector_SCAN/main/: main.c
perception-layer/config/: config_template.h
perception-layer/esp32-nodes-ino/: README.en.md  README.md  partitions_huge_app.csv  pio_common.ini
perception-layer/esp32-nodes-ino/ESP32_01_Deauth_Detector_CH_01/: config_template.h  main.ino  platformio.ini
perception-layer/esp32-nodes-ino/ESP32_02_Deauth_Detector_CH_06/: config_template.h  main.ino  platformio.ini
perception-layer/esp32-nodes-ino/ESP32_03_Deauth_Detector_CH_11/: config_template.h  main.ino  platformio.ini
perception-layer/esp32-nodes-ino/ESP32_04_Deauth_Detector_SCANN/: config_template.h  main.ino  platformio.ini
perception-layer/espidf-nodes/: README.en.md  README.md
perception-layer/espidf-nodes/ESP32_01_Deauth_Detector_CH_01/: CMakeLists.txt  sdkconfig.defaults
perception-layer/espidf-nodes/ESP32_01_Deauth_Detector_CH_01/main/: CMakeLists.txt  main.c
perception-layer/espidf-nodes/ESP32_02_Deauth_Detector_CH_06/: CMakeLists.txt  sdkconfig.defaults
perception-layer/espidf-nodes/ESP32_03_Deauth_Detector_CH_11/: CMakeLists.txt  sdkconfig.defaults
perception-layer/espidf-nodes/ESP32_04_Deauth_Detector_SCAN/: CMakeLists.txt  sdkconfig.defaults
perception-layer/espidf-nodes/ESP32_04_Deauth_Detector_SCAN/main/: CMakeLists.txt  main.c
perception-layer/espidf-nodes/config/: config_template.h
perception-layer/shared/DeauthEvent/: CMakeLists.txt  library.json  library.properties
perception-layer/shared/DeauthEvent/src/: deauth_diag.c  deauth_diag.h  deauth_event.c  deauth_event.h  deauth_ratelimit.c  deauth_ratelimit.h
perception-layer/shared/DeauthEvent/tests/: Makefile  fuzz_deauth_event.c  test_cpp_linkage.cpp  test_deauth_diag.c  test_deauth_event.c  test_deauth_ratelimit.c
perception-layer/shared/DeauthJson/: CMakeLists.txt  library.json  library.properties
perception-layer/shared/DeauthJson/src/: deauth_json.c  deauth_json.h
perception-layer/shared/DeauthJson/tests/: Makefile  contract_cross.py  emit_vectors.c  fuzz_deauth_json.c  test_cpp_linkage.cpp  test_deauth_json.c
perception-layer/shared/WifiMgmtParser/: CMakeLists.txt  library.json  library.properties
perception-layer/shared/WifiMgmtParser/src/: wifi_mgmt_parser.c  wifi_mgmt_parser.h
perception-layer/shared/WifiMgmtParser/tests/: .gitignore  Makefile  fuzz_wifi_mgmt_parser.c  test_cpp_linkage.cpp  test_wifi_mgmt_parser.c
processing-layer/: README.en.md  README.md  main.py  pytest.ini  requirements-dev.txt  requirements.txt
processing-layer/config/: devices.yaml.example
processing-layer/docker/: .env.example  docker-compose.yml
processing-layer/docker/init-scripts/: init.sql  (+1 more)
processing-layer/src/: Esp32_status_manager.py  ble_manager.py  data_processor.py  database.py  mqtt_client.py  telegram_alert.py  utils.py
processing-layer/tests/: test_ble_manager.py  test_data_processor.py
tools/: parse_diag.py  simulate_esp32.py
tools/tests/: test_parse_diag.py
(+11 files in other folders)
